[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/Main.gd" type="Script" id=1]
[ext_resource path="res://Interface/Interface_menu_pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/Interface_menu_loading.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Interface_menu_main.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Interface_menu_option_gameplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/Interface_menu_option_visual.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interface/Interface_menu_option_sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main/Save_load.tscn" type="PackedScene" id=8]
[ext_resource path="res://Interface/Interface_menu_option_graphic.tscn" type="PackedScene" id=9]
[ext_resource path="res://Interface/Interface_menu_mission.tscn" type="PackedScene" id=10]
[ext_resource path="res://Interface/Interface_menu_option.tscn" type="PackedScene" id=11]

[node name="Main" type="Spatial"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Interface_menu_loading" parent="." instance=ExtResource( 3 )]

[node name="Interface_menu_main" parent="." instance=ExtResource( 4 )]

[node name="Interface_menu_mission" parent="." instance=ExtResource( 10 )]

[node name="Interface_menu_option" parent="." instance=ExtResource( 11 )]

[node name="Interface_menu_option_gameplay" parent="." instance=ExtResource( 5 )]

[node name="Interface_menu_option_graphic" parent="." instance=ExtResource( 9 )]

[node name="Interface_menu_option_sound" parent="." instance=ExtResource( 7 )]

[node name="Interface_menu_option_visual" parent="." instance=ExtResource( 6 )]

[node name="Interface_menu_pause" parent="." instance=ExtResource( 2 )]

[node name="Save_load" parent="." instance=ExtResource( 8 )]
